--- a/README
+++ b/README
@@ -1,5 +1,7 @@
-
-First, enable the network plugin in collectd.
+Setup
+-----
+- apt-get install collectd
+- Enable the network plugin in /etc/collectd/collectd.conf
 
 
 Run
